--- a/dic/秘密花园需求文档.md
+++ b/dic/秘密花园需求文档.md
@@ -34,3 +34,11 @@
 ### 2.3、页面设计
 
 略
+
+## 3、前端展示
+
+页面分为两个部分，一个是以模块时间为线索的时间线，一个是用于展示当前模块的走马灯。
+
+### 3.1、水平时间线
+
+进入页面需要展示最新的模块数据，每次展示4-5个模块，在保证点击每个点能获取每个模块信息的同时，还能使用左右移动按钮进行移动，最后还有一个鼠标滚轮的上下滑动。
