初步完成秘密花园的展示

--- a/dic/秘密花园需求文档.md
+++ b/dic/秘密花园需求文档.md
@@ -41,4 +41,13 @@
 
 ### 3.1、水平时间线
 
-进入页面需要展示最新的模块数据，每次展示4-5个模块，在保证点击每个点能获取每个模块信息的同时，还能使用左右移动按钮进行移动，最后还有一个鼠标滚轮的上下滑动。
+进入页面需要展示最新的模块数据，每次展示4-5个模块，在保证点击每个点能获取每个模块信息的同时，还能使用左右移动按钮进行移动，每次移动更新4-5个新的模块进来，当末端模块数不够时补充上一个段的连续模块进来。
+
+存在的逻辑以及接口：
+- 页面刚加载进来展示最新的模块数据，对应接口：获取最新的模块信息
+- 左右移动分段获取模块数据，对应接口：分页获取模块信息，并能在不足数量时自动补充最近的模块信息
+
+### 3.2、模块跑马灯
+
+点击到指定的时间模块时，用跑马灯的形式对模块的图片进行展示，这里需要一个根据模块`ID`获取完整的模块信息接口。
+
